[gd_scene load_steps=3 format=3 uid="uid://ceu5kslnknwmp"]

[ext_resource type="Script" uid="uid://ux1os0355lr" path="res://Scenes/map_event/map_event.gd" id="1_usc5y"]
[ext_resource type="Texture2D" uid="uid://bx3sa75qdlevu" path="res://global/art/nest.PNG" id="2_xxn67"]

[node name="Event" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_usc5y")

[node name="Background" type="ColorRect" parent="."]
modulate = Color(0, 0, 0, 0.368627)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.309804)

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(234, 109)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -109.0
offset_top = -55.0
offset_right = 125.0
offset_bottom = 71.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.147672, 0.147672, 0.147672, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(220, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -109.0
offset_top = -42.0
offset_right = 125.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 8
theme_override_constants/margin_bottom = 8

[node name="EventPicture" type="TextureRect" parent="HBoxContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
texture = ExtResource("2_xxn67")
expand_mode = 1
stretch_mode = 6

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(145, 100)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(130, 60)
layout_mode = 2
theme_override_constants/margin_top = 8

[node name="EventText" type="Label" parent="HBoxContainer/VBoxContainer2/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_vertical = 0
text = "A line of mysterious hooded figures seem to gathered in a cave. They seem to be offering valuables to a glowing altar."
autowrap_mode = 3

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(125, 33)
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="EventButtons" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="Button3" type="Button" parent="HBoxContainer/VBoxContainer2/MarginContainer2/EventButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
text = "(Take the money) Get 150 gold"
alignment = 0
autowrap_mode = 3

[node name="Button2" type="Button" parent="HBoxContainer/VBoxContainer2/MarginContainer2/EventButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
text = "(Sacrifice) Lose 20 hp. Gain Ritual"
alignment = 0
autowrap_mode = 3

[node name="Button1" type="Button" parent="HBoxContainer/VBoxContainer2/MarginContainer2/EventButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
text = "(Pray) Upgrade a card"
alignment = 0
autowrap_mode = 3

[node name="EventTitle" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 24.0
offset_top = 29.0
offset_right = 64.0
offset_bottom = 36.125
text = "The Cult"
